IE compatibility & minor cleanup

--- a/examples/Books/books.html
+++ b/examples/Books/books.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 <head>
 
@@ -26,7 +28,7 @@ div#screen {
 	background-color: lightblue;
 	max-width: 800px;
 	max-height: 600px;
-	position: relative;
+	position: absolute;
 }
 
 div#topBar {
