Fixes to: - WebKit a:hover issue - Tab switch regression - Automatic author list update

--- a/examples/Books/books.html
+++ b/examples/Books/books.html
@@ -105,9 +105,11 @@ textarea {
 
 div#list a {
 	cursor: pointer;
+	display: block;
+	padding: 0px;
 }
 
-div#list a:hover {
+div#list div:hover a {
 	color: darkblue;
 	text-decoration: underline;
 }
