--- a/examples/Async/async_test.html
+++ b/examples/Async/async_test.html
@@ -6,13 +6,26 @@
 <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript" 
 		djConfig="isDebug: true, debugAtAllCosts: true, parseOnLoad: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'js/jtlc', 'adstream.data': 'js/data', 'test': '.' }"></script>
 
-<!-- The following scripts are normally loaded by Dojo but with 
-     static file access XHRs often don't work =============== -->
-
 <!--
+
 <script src="js/jtlc/CHT.js"></script>
 <script src="js/jtlc/CHT/instance.js"></script>
 -->
+
+<style type='text/css'>
+tr {
+	height: 2.5em;
+	position: relative;
+}
+
+td:first-child {
+	width: 10ex;
+}
+
+tr.selected {
+	background: blue;
+}
+</style>
 
 <script type="text/javascript">
 dojo.provide( 'test' );
