Switched to using CHT loader

--- a/examples/booze/booze.html
+++ b/examples/booze/booze.html
@@ -6,7 +6,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" 
 		type="text/javascript" 
-		djConfig="isDebug: true, debugAtAllCosts: true, parseOnLoad: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'js/jtlc', 'adstream.data': 'js/data', 'app': 'js' }"></script>
+		djConfig="isDebug: true, debugAtAllCosts: true, parseOnLoad: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'js/jtlc', 'adstream.data': 'js/data', 'app': 'js', 'CHT': '.' }"></script>
 <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css">
 
 <link rel="stylesheet" type="text/css" href="booze.css">
