--- a/examples/booze/booze.html
+++ b/examples/booze/booze.html
@@ -9,6 +9,13 @@
 		djConfig="isDebug: true, debugAtAllCosts: true, parseOnLoad: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'js/jtlc', 'adstream.data': 'js/data', 'app': 'js', 'CHT': '.' }"></script>
 <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css">
 
+<!--
+<script src="js/dojo/dojo/dojo.js" 
+		type="text/javascript"
+		djConfig="isDebug: true, debugAtAllCosts: true, parseOnLoad: true, baseUrl: './', modulePaths: { 'dojo': 'js/dojo/dojo', 'dijit': 'js/dojo/dijit', 'dojox': 'js/dojo/dojox', 'dojox.jtlc': 'js/jtlc', 'adstream.data': 'js/data', 'app': 'js', 'CHT': '.' }"></script>
+<link rel="stylesheet" type="text/css" href="js/dojo/dijit/themes/claro/claro.css">
+-->
+
 <link rel="stylesheet" type="text/css" href="booze.css">
 
 <script type="text/javascript">
