Fix to module paths

--- a/examples/form/form.html
+++ b/examples/form/form.html
@@ -37,7 +37,7 @@
 </style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.8/dojo/dojo.js.uncompressed.js" type="text/javascript" 
-		djConfig="isDebug: true, debugAtAllCosts: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'jtlc', 'adstream': 'adstream', 'form': 'form', 'mockup': 'mockup' }"></script>
+		djConfig="isDebug: true, debugAtAllCosts: true, baseUrl: './', modulePaths: { 'dojox.jtlc': 'jtlc', 'adstream': 'adstream', 'form': 'form', 'mockup': 'mockup', CHT: 'CHT' }"></script>
 
 <script type="text/javascript">
 
